----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-02-05 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_replace.php3, tbl_replace_fields.php3: do not display the
      UPDATE query if there was some binary upload in it, otherwise
      display it

2003-02-04 Alexander M. Turek  <rabus@users.sourceforge.net>
    * common.lib.php3:
      - Patch #669255 (Initial DB list for MySQL > 4.0.2), thanks to Charles
        Bailey (charles_bailey);
      - Don't use small fonts for Opera 7.
    * ldi_check.php3: Backslahes should be escaped.
    * Documentation.html: Added a note about Opera 7.

2003-02-04 Michal Cihar  <nijel@users.sourceforge.net>
    * Documentation.*: Added information about binary checbox when uploading
      files.

2003-02-04 Garvin Hicking  <me@supergarv.de>
    * common.lib.php3: Fixed a possible 'undefined index' error.

2003-02-04 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: new faq entry about IE bug with http auth,
      switching from one server to the other
    * db_details_qbe.php3: bug 661758 (undefined offset when doing a qbe
      and only table selected)
    * ldi_check.php3: check local_infile on recent MySQL versions,
      thanks to Alexander

2003-02-03 Michal Cihar  <nijel@users.sourceforge.net>
    * libraries/display_tbl.lib.php3, tbl_change.php3: Show blob size (RFE
      #678729).
    * tbl_replace_fields.php3, tbl_change.php3: Allow binary uploads.
    * tbl_dump.php3: Fix bug #679699 (export to XML, save to file - Undefined
      variable: charset_of_file).

2003-02-03 Garvin Hicking  <me@supergarv.de>
    * pdf_schema.php3, libraries/dbg/profiling.php3,
      libraries/xpath/XPath.class.php: Backwards compatibility (foreach loops).

2003-02-03 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.4.0-rc1 released
    and after the release:
    * lang/romanian: update, thanks to Valics Lehel
    * lang/spanish: update, thanks to Daniel Hinostroza C.