@@ -2218,15 +2218,6 @@ $cfg['PmaAbsoluteUri'] = (!empty($_SERVER['HTTPS']) ? 'https' : 'http') . '://'
     This is a bug in Internet Explorer, other browsers do not behave this way.
 </p>
 
-<h4>
-    [5.14] With Opera 7.00, I am not able to delete characters once I typed them
-    into the SQL query text box.
-</h4>
-<p>
-    This is a bug in Opera 7. For now, we can only recommend either to switch
-    off JavaScript (e.g. by pressing F12) or to downgrade to version 6.05.
-</p>
-
 <a name="faqusing"></a><br />
 <h3>[6. Using phpMyAdmin]</h3>
 
